fixing attribution links

--- a/index.html
+++ b/index.html
@@ -131,11 +131,12 @@
     <footer>
       <div class="attribution">
         Challenge by
-        <a
-          href="https://www.frontendmentor.io/profile/claire-ca"
-          target="_blank"
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Claire Calder</a>.
+        >. Coded by
+        <a href="https://www.frontendmentor.io/profile/claire-ca"
+          >Claire Calder</a
+        >.
       </div>
     </footer>
   </body>
